--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-﻿#page
+﻿#page,#userListenGog,#userAuto
 {
     background:url('../images/bg_page.jpg') repeat-x;
 }
@@ -43,7 +43,7 @@
 .returnPage a
 {
     cursor:pointer;
-    font-size:13px;
+    font-size:14px;
     font-weight:bold;
     text-decoration: none;
     color:#000;
@@ -53,7 +53,7 @@
     padding-right:3px;
     font-weight:bold;
     color:red; 
-    font-size:13px;
+    font-size:14px;
 }
 .dialogContent
 {
@@ -61,6 +61,7 @@
     line-height:25px;
     margin:auto;
     font-weight:bold;
+    font-size:16px;
     color:#000;
 }
 .dialogBtnSize
@@ -68,6 +69,11 @@
     width:220px;
     height:46px;
     cursor:pointer;
+}
+.dialogImgSize
+{
+    width:210px;
+    height:176px;
 }
 .pageBtnSize
 {
@@ -79,4 +85,18 @@
 {
     color:#666;
     font-size:14px;
+}
+.divHidden
+{
+    overflow:hidden;
+    font-size:14px;
+    color:#000;
+    font-weight:bold;
+}
+.dialogFont
+{
+    font-size:14px;
+    color:#000;
+    font-weight:bold;
+
 }
